# curves

./: LICENSE  README.md  lm_bernoulli.ggb  lm_besace.ggb  lm_cardioid.ggb  lm_ceva.ggb  lm_circle.ggb  lm_descartes.ggb  lm_doublefolium.ggb  lm_gerono.ggb  lm_lemniscate.ggb  lm_piriform.ggb  lm_poly_param_d1.wxm  lm_quadrifolium.ggb  lm_ramphoid_cusp.ggb  lm_ratparam_d2.wxm  lm_scarabaeus.ggb  lm_tacnode.ggb  lm_tangents.wxm  lm_trefoil_spacecurve.ggb  lm_tricuspoid.ggb  lm_trifolium.ggb  lm_vanhoeij.ggb  lm_walker.ggb  lm_watt.ggb  lm_watt_curve.ggb  lm_watt_linkage.ggb
doc/lm_lemniscate_para/: lm_lemniscate_para.lyx
doc/lm_ratcircle/: lm_ratcircle.lyx
geogebra/: lm_capricornoid.ggb  lm_cardioid.ggb  lm_ceva.ggb  lm_circle.ggb  lm_inverse_wrt_circle.ggb  lm_links.ggb  lm_lissajous_quadratic.ggb  lm_monge.ggb  lm_pappus.ggb  lm_peaucellier_lipkin.ggb  lm_ramphoid_cusp.ggb  lm_scarabaeus.ggb  lm_signed_tetra_vol.ggb  lm_siluroid.ggb  lm_trefoil_surface.ggb  lm_tricuspoid.ggb  lm_trifolium.ggb
mathmod/: lm_scarabaeus.js  lm_trefoil_knot.js  lm_trefoil_lazy.js
mathmod/lm_trefoil_knot/: mathmodcollection.js
mathmod/lm_trefoil_lazy/: mathmodcollection.js
maxima/: lm_curves.mac  lm_grobner_buchberger.wxm  lm_grobner_buchberger.wxmx  lm_lissajous_quadratic.wxm  lm_ratparam_d1.wxm  lm_ratparam_d2.wxm  lm_tangents.wxm  lm_trefoil_lazy.wxm  lm_trefoil_surface.wxm  lm_trefoil_surface_para.wxm
sympy/: lm_grobner_buchberger.py  sympy_grobner.py
vtk/Figure8Torus/: CMakeLists.txt  Figure8Torus.cxx  Figure8Torus.h  main.cxx
vtk/ParaKnot/: CMakeLists.txt  ParaKnot.cxx  ParaKnot.h  main.cxx
vtk/TrefoilKnot/: CMakeLists.txt  TrefoilKnot.cxx  TrefoilKnot.h  main.cxx
